# avisynthplus-c-api-dynamic-loader

./: CHANGELOG.md  CMakeLists.txt  README.md  avs_c_api_loader.cpp  avs_c_api_loader.hpp
cmake/: avs_c_api_loader-config.cmake.in
src/: avs_c_api_loader.cpp  avs_c_api_loader.hpp
